--- a/package.json
+++ b/package.json
@@ -16,8 +16,13 @@
     "url": "https://github.com/netbeen/FundManagerWeb/issues"
   },
   "homepage": "https://github.com/netbeen/FundManagerWeb#readme",
-  "dependencies": {},
+  "dependencies": {
+    "babel-core": "6.13.2",
+    "babel-polyfill": "6.13.0",
+    "babel-preset-es2015-node6": "0.3.0",
+    "babel-preset-stage-3": "6.5.0",
+    "koa": "2.0.0"
+  },
   "devDependencies": {
-    "koa": "^2.0.0"
   }
 }
