--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "fund_manager_web",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node start.js"
   },
   "repository": {
     "type": "git",
@@ -17,11 +17,11 @@
   },
   "homepage": "https://github.com/netbeen/FundManagerWeb#readme",
   "dependencies": {
-    "babel-core": "6.13.2",
-    "babel-polyfill": "6.13.0",
-    "babel-preset-es2015-node6": "0.3.0",
-    "babel-preset-stage-3": "6.5.0",
-    "koa": "2.0.0"
+    "babel-core": ">=6.14.0",
+    "babel-polyfill": ">=6.13.0",
+    "babel-preset-es2015-node6": ">=0.3.0",
+    "babel-preset-stage-3": ">=6.11.0",
+    "koa": ">=2.0.0"
   },
   "devDependencies": {
   }
