--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "babel-polyfill": ">=6.13.0",
     "babel-preset-es2015-node6": ">=0.3.0",
     "babel-preset-stage-3": ">=6.11.0",
-    "koa": ">=2.0.0"
+    "koa": ">=2.0.0",
+    "koa-router": ">=7.0.1"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
