--- a/package.json
+++ b/package.json
@@ -16,13 +16,20 @@
     "url": "https://github.com/netbeen/FundManagerWeb/issues"
   },
   "homepage": "https://github.com/netbeen/FundManagerWeb#readme",
+  "engines": {
+    "node": ">=6.4.0",
+    "npm": ">=3.10.3"
+  },
   "dependencies": {
     "babel-core": ">=6.14.0",
     "babel-polyfill": ">=6.13.0",
     "babel-preset-es2015-node6": ">=0.3.0",
     "babel-preset-stage-3": ">=6.11.0",
     "koa": ">=2.0.0",
-    "koa-router": ">=7.0.1"
+    "koa-bodyparser": ">=3.2.0",
+    "koa-pug": ">=3.0.0-0",
+    "koa-router": ">=7.0.1",
+    "pug": ">=2.0.0-beta6"
   },
   "devDependencies": {}
 }
