--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,7 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": ">=4.0.0-alpha.3"
+    "bootstrap": "3.3.5"
   },
   "overrides": {
     "bootstrap": {
