--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "q": ">=2.0.3",
     "run-sequence": ">=1.2.2",
     "stylus": ">=0.54.5",
+    "sync-request": "^3.0.1",
     "underscore": ">=1.8.3",
     "vinyl-paths": ">=2.1.0"
   },
