draw the first graph on page

--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "3.3.5"
+    "bootstrap": "3.3.5",
+    "underscore": "^1.8.3"
   },
   "overrides": {
     "bootstrap": {
