--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "koa-pug": ">=3.0.0-0",
     "koa-router": ">=7.0.1",
     "main-bower-files": ">=2.13.1",
+    "nodemailer": "^2.6.0",
     "pug": ">=2.0.0-beta6",
     "q": ">=2.0.3",
     "run-sequence": ">=1.2.2",
