--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "pug": ">=2.0.0-beta6",
     "q": ">=2.0.3",
     "run-sequence": ">=1.2.2",
+    "sqlite-sync": "^0.3.5",
     "stylus": ">=0.54.5",
     "sync-request": "^3.0.1",
     "underscore": ">=1.8.3",
