--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   },
   "homepage": "https://github.com/netbeen/FundManagerWeb#readme",
   "engines": {
-    "node": ">=6.4.0",
-    "npm": ">=3.10.3"
+    "node": ">=7.1.0",
+    "npm": ">=3.10.9"
   },
   "dependencies": {
     "babel-core": "^6.18.2",
@@ -26,6 +26,7 @@
     "babel-preset-es2015-node6": "^0.4.0",
     "babel-preset-stage-3": "^6.17.0",
     "bower": "^1.8.0",
+    "colors": "^1.1.2",
     "del": ">=2.2.2",
     "gulp": ">=3.9.1",
     "gulp-bower": ">=0.0.13",
