--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-es2015-node6": "^0.4.0",
     "babel-preset-stage-3": "^6.17.0",
     "bower": "^1.8.0",
+    "cli-table": "^0.3.1",
     "colors": "^1.1.2",
     "del": ">=2.2.2",
     "gulp": ">=3.9.1",
