update_npm_package

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "npm": ">=3.10.9"
   },
   "dependencies": {
-    "babel-core": "^6.23.1",
+    "babel-core": "^6.24.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015-node6": "^0.4.0",
     "babel-preset-stage-3": "^6.22.0",
@@ -33,13 +33,13 @@
     "gulp-bower": ">=0.0.13",
     "gulp-connect": ">=5.0.0",
     "gulp-stylus": "^2.6.0",
-    "koa": ">=2.0.0",
-    "koa-bodyparser": ">=3.2.0",
+    "koa": "^2.1.0",
+    "koa-bodyparser": "^4.1.0",
     "koa-pug": ">=3.0.0-0",
     "koa-router": ">=7.0.1",
     "main-bower-files": ">=2.13.1",
     "node-schedule": "^1.2.0",
-    "nodemailer": "^3.1.1",
+    "nodemailer": "^3.1.5",
     "pug": ">=2.0.0-beta6",
     "q": ">=2.0.3",
     "run-sequence": ">=1.2.2",
