--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "koa-router": ">=7.0.1",
     "koa-static": "^3.0.0",
     "main-bower-files": ">=2.13.1",
+    "mysql2": "^1.3.5",
     "node-schedule": "^1.2.0",
     "nodemailer": "^3.1.5",
     "pug": ">=2.0.0-beta6",
     "q": ">=2.0.3",
     "run-sequence": ">=1.2.2",
+    "sequelize": "^4.2.0",
     "sqlite-sync": "^0.3.6",
     "stylus": ">=0.54.5",
     "sync-request": "^4.0.1",
