--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "npm": ">=3.10.9"
   },
   "dependencies": {
-    "babel-core": "^6.24.0",
+    "babel-core": "^6.25.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015-node6": "^0.4.0",
-    "babel-preset-stage-3": "^6.22.0",
+    "babel-preset-stage-3": "^6.24.1",
     "bower": "^1.8.0",
     "cli-table": "^0.3.1",
     "co": "^4.6.0",
@@ -34,14 +34,14 @@
     "gulp-bower": ">=0.0.13",
     "gulp-connect": ">=5.0.0",
     "gulp-stylus": "^2.6.0",
-    "koa": "^2.1.0",
-    "koa-bodyparser": "^4.1.0",
+    "koa": "^2.3.0",
+    "koa-bodyparser": "^4.2.0",
     "koa-pug": ">=3.0.0-0",
-    "koa-router": ">=7.0.1",
+    "koa-router": "^7.2.1",
     "koa-static": "^3.0.0",
     "main-bower-files": ">=2.13.1",
     "mysql2": "^1.3.5",
-    "node-schedule": "^1.2.0",
+    "node-schedule": "^1.2.3",
     "nodemailer": "^3.1.5",
     "pug": ">=2.0.0-beta6",
     "q": ">=2.0.3",
@@ -49,7 +49,7 @@
     "sequelize": "^4.2.0",
     "sqlite-sync": "^0.3.6",
     "stylus": ">=0.54.5",
-    "sync-request": "^4.0.1",
+    "sync-request": "^4.1.0",
     "then-request": "^2.2.0",
     "underscore": ">=1.8.3",
     "vinyl-paths": ">=2.1.0"
