--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "cli-table": "^0.3.1",
     "co": "^4.6.0",
     "colors": "^1.1.2",
-    "del": ">=2.2.2",
+    "del": "^3.0.0",
     "gulp": ">=3.9.1",
     "gulp-bower": ">=0.0.13",
     "gulp-connect": ">=5.0.0",
@@ -42,7 +42,7 @@
     "main-bower-files": ">=2.13.1",
     "mysql2": "^1.3.5",
     "node-schedule": "^1.2.3",
-    "nodemailer": "^3.1.5",
+    "nodemailer": "^4.0.1",
     "pug": ">=2.0.0-beta6",
     "q": ">=2.0.3",
     "run-sequence": ">=1.2.2",
@@ -50,7 +50,7 @@
     "sqlite-sync": "^0.3.6",
     "stylus": ">=0.54.5",
     "sync-request": "^4.1.0",
-    "then-request": "^2.2.0",
+    "then-request": "^3.1.0",
     "underscore": ">=1.8.3",
     "vinyl-paths": ">=2.1.0"
   },
