--- a/package.json
+++ b/package.json
@@ -38,18 +38,18 @@
     "koa-bodyparser": "^4.2.0",
     "koa-pug": ">=3.0.0-0",
     "koa-router": "^7.2.1",
-    "koa-static": "^3.0.0",
+    "koa-static": "^4.0.1",
     "main-bower-files": ">=2.13.1",
-    "mysql2": "^1.3.5",
+    "mysql2": "^1.3.6",
     "node-schedule": "^1.2.3",
     "nodemailer": "^4.0.1",
     "pug": ">=2.0.0-beta6",
     "q": ">=2.0.3",
-    "run-sequence": ">=1.2.2",
-    "sequelize": "^4.2.0",
+    "run-sequence": "^2.0.0",
+    "sequelize": "^4.3.2",
     "stylus": ">=0.54.5",
     "sync-request": "^4.1.0",
-    "then-request": "^3.1.0",
+    "then-request": "^4.1.0",
     "underscore": ">=1.8.3",
     "vinyl-paths": ">=2.1.0"
   },
